notas um pouco mais arrumadas

--- a/index.html
+++ b/index.html
@@ -34,21 +34,13 @@
         <ol></ol>
     </table>
 
-    <audio id="doa" src="audio/Mid A.mp3"></audio>
-    <audio id="rea" src="audio/Mid B.mp3"></audio>
-    <audio id="mia" src="audio/Middle C.mp3"></audio>
-    <audio id="faa" src="audio/Mid D.mp3"></audio>
-    <audio id="sola" src="audio/Mid E.mp3"></audio>
-    <audio id="laa" src="audio/Mid F.mp3"></audio>
-    <audio id="sia" src="audio/Mid G.mp3"></audio>
-
-    <!-- <audio id="doa" src="audio/Middle C.mp3"></audio>
+    <audio id="doa" src="audio/Middle C.mp3"></audio>
     <audio id="rea" src="audio/Mid D.mp3"></audio>
     <audio id="mia" src="audio/Mid E.mp3"></audio>
     <audio id="faa" src="audio/Mid F.mp3"></audio>
     <audio id="sola" src="audio/Mid G.mp3"></audio>
     <audio id="laa" src="audio/Mid A.mp3"></audio>
-    <audio id="sia" src="audio/Mid B.mp3"></audio> -->
+    <audio id="sia" src="audio/Mid B.mp3"></audio>
 
     <div id="credit">Icons made by <a href="https://www.flaticon.com/authors/smartline" title="Smartline">Smartline</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
             title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
