--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Virtual Piano</title>
+    <title>Piano Online</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="keyboard.png">
 </head>
@@ -14,19 +14,30 @@
     <!--
         ME SURPREENDAM
     -->
-    <h1>Piano Tiles</h1>
+    <h1>Tiles</h1>
     <h2>Teclas A~J</h2>
 
     <div id="piano">
-        <button id="do">Dó</button>
-        <button id="re">Ré</button>
-        <button id="mi">Mi</button>
-        <button id="fa">Fa</button>
-        <button id="sol">Sol</button>
-        <button id="la">Lá</button>
-        <button id="si">Si</button>
+        <button id="c">C</button>
+        <button id="d">D</button>
+        <button id="e">E</button>
+        <button id="f">F</button>
+        <button id="g">G</button>
+        <button id="a">A</button>
+        <button id="b">B</button>
+        <button id="c2">C</button>
+
     </div>
 
+    <div id="br">
+        <ol>Dó = C</ol>
+        <ol>Ré = D</ol>
+        <ol>Mi = E</ol>
+        <ol>Fa = F</ol>
+        <ol>Sol = G</ol>
+        <ol>La = A</ol>
+        <ol>Si = B</ol>
+    </div>
 
     <table>
         <ol></ol>
@@ -34,13 +45,16 @@
         <ol></ol>
     </table>
 
-    <audio id="doa" src="audio/Middle C.mp3"></audio>
-    <audio id="rea" src="audio/Mid D.mp3"></audio>
-    <audio id="mia" src="audio/Mid E.mp3"></audio>
-    <audio id="faa" src="audio/Mid F.mp3"></audio>
-    <audio id="sola" src="audio/Mid G.mp3"></audio>
-    <audio id="laa" src="audio/Mid A.mp3"></audio>
-    <audio id="sia" src="audio/Mid B.mp3"></audio>
+    <audio id="ca" src="audio/Mid C.mp3"></audio>
+    <audio id="da" src="audio/Mid D.mp3"></audio>
+    <audio id="ea" src="audio/Mid E.mp3"></audio>
+    <audio id="fa" src="audio/Mid F.mp3"></audio>
+    <audio id="ga" src="audio/Mid G.mp3"></audio>
+    <audio id="aa" src="audio/Mid A.mp3"></audio>
+    <audio id="ba" src="audio/Mid B.mp3"></audio>
+    <audio id="ca2" src="audio/Mid C2.mpeg"></audio>
+
+
 
     <div id="credit">Icons made by <a href="https://www.flaticon.com/authors/smartline" title="Smartline">Smartline</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
             title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
