--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <ol></ol>
     </table>
 
-    <audio id="ac" src="audio/Mid C.mp3"></audio>
-    <audio id="ad" src="audio/Mid D.mp3"></audio>
-    <audio id="ae" src="audio/Mid E.mp3"></audio>
-    <audio id="af" src="audio/Mid F.mp3"></audio>
-    <audio id="ag" src="audio/Mid G.mp3"></audio>
-    <audio id="aa" src="audio/Mid A.mp3"></audio>
-    <audio id="ab" src="audio/Mid B.mp3"></audio>
-    <audio id="ac2" src="audio/Mid C2.mpeg"></audio>
+    <audio id="ac" src="audio/Mid_C.mp3"></audio>
+    <audio id="ad" src="audio/Mid_D.mp3"></audio>
+    <audio id="ae" src="audio/Mid_E.mp3"></audio>
+    <audio id="af" src="audio/Mid_F.mp3"></audio>
+    <audio id="ag" src="audio/Mid_G.mp3"></audio>
+    <audio id="aa" src="audio/Mid_A.mp3"></audio>
+    <audio id="ab" src="audio/Mid_B.mp3"></audio>
+    <audio id="ac2" src="audio/Mid_C2.mp3"></audio>
 
 
 
