--- a/index.html
+++ b/index.html
@@ -30,20 +30,30 @@
     </div>
 
     <div id="br">
-        <ol>Dó = C</ol>
-        <ol>Ré = D</ol>
-        <ol>Mi = E</ol>
-        <ol>Fa = F</ol>
-        <ol>Sol = G</ol>
-        <ol>La = A</ol>
-        <ol>Si = B</ol>
+        <h2>Twinkle Twinkle Little Star</h2>
+        <ol>
+            CC GG AA G
+        </ol>
+        <ol>
+            FF EE DD C
+        </ol>
+        <ol>
+            GG FF EE D
+        </ol>
+        <ol>
+            GG FF EE D
+        </ol>
+        <ol>
+            CC GG AA G
+        </ol>
+        <ol>
+            FF EE DD C
+        </ol>
     </div>
 
-    <table>
-        <ol></ol>
-        <ol></ol>
-        <ol></ol>
-    </table>
+    <p>
+
+    </p>
 
     <audio id="ac" src="audio/Mid_C.mp3"></audio>
     <audio id="ad" src="audio/Mid_D.mp3"></audio>
