--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         ME SURPREENDAM
     -->
     <h1>Tiles</h1>
-    <h2>Teclas A~J</h2>
+    <h2>Teclas A~K</h2>
 
     <div id="piano">
         <button id="c">C</button>
